--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -23,11 +23,11 @@
                             <div class="dropdown-content">
                                 <a href="../bulgarian-broderie/">Bulgarian broderie</a>
                                 <a href="">Summer 2025</a>
-                                <a href="">Winter 2024</a>
+                                <!-- <a href="">Winter 2024</a> -->
                             </div>
                         </li>
                         <li><a href="../../index.html#about">About</a></li>
-                        <li><a href="../../index.html#atelier">Atelier</a></li>
+                        <li><a href="../../index.html#atelier">Atelier Services</a></li>
                         <li><a href="../../index.html#contact">Contact</a></li>
                     </ul>
                 </nav>
@@ -40,11 +40,11 @@
                             <ul class="mobile-submenu">
                                 <a href="../bulgarian-broderie/">Bulgarian broderie</a>
                                 <a href="">Summer 2025</a>
-                                <a href="">Winter 2024</a>
+                                <!-- <a href="">Winter 2024</a> -->
                             </ul>
                         </li>
                         <li><a href="../../index.html#about">About</a></li>
-                        <li><a href="../../index.html#atelier">Atelier</a></li>
+                        <li><a href="../../index.html#atelier">Atelier Services</a></li>
                         <li><a href="../../index.html#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -147,7 +147,7 @@
                     <ul class="footer-nav">
                         <li><a href="../../index.html">Home</a></li>
                         <li><a href="../../index.html#about">About</a></li>
-                        <li><a href="../../index.html#atelier">Atelier</a></li>
+                        <li><a href="../../index.html#atelier">Atelier Services</a></li>
                         <li><a href="../../index.html#contact">Contact</a></li>
                     </ul>
                 </div>
@@ -156,7 +156,7 @@
                     <ul class="footer-nav">
                         <li><a href="../bulgarian-broderie/">Bulgarian broderie</a></li>
                         <li><a href="">Summer 2025</a></li>
-                        <li><a href="">Winter 2024</a></li>
+                        <!-- <li><a href="">Winter 2024</a></li> -->
                     </ul>
                 </div>
                 <div class="footer-col">
