--- a/index.html
+++ b/index.html
@@ -705,11 +705,11 @@
                      <div class="dropdown-content">
                         <a href="collections/bulgarian-broderie/">Bulgarian broderie</a>
                         <a href="">Summer 2025</a>
-                        <a href="">Winter 2024</a>
+                        <!-- <a href="">Winter 2024</a> -->
                      </div>
                   </li>
                   <li><a href="#about">About</a></li>
-                  <li><a href="#atelier">Atelier</a></li>
+                  <li><a href="#atelier">Atelier Services</a></li>
                   <li><a href="#contact">Contact</a></li>
                </ul>
             </nav>
@@ -722,11 +722,11 @@
                      <ul class="mobile-submenu">
                         <li><a href="collections/bulgarian-broderie/">Bulgarian broderie</a></li>
                         <li><a href="">Summer 2025</a></li>
-                        <li><a href="">Winter 2024</a></li>
+                        <!-- <li><a href="">Winter 2024</a></li> -->
                      </ul>
                   </li>
                   <li><a href="#about">About</a></li>
-                  <li><a href="#atelier">Atelier</a></li>
+                  <li><a href="#atelier">Atelier Services</a></li>
                   <li><a href="#contact">Contact</a></li>
                </ul>
             </div>
@@ -955,7 +955,7 @@
                <ul class="footer-nav">
                   <li><a href="#collections">Collections</a></li>
                   <li><a href="#about">About</a></li>
-                  <li><a href="#atelier">Atelier</a></li>
+                  <li><a href="#atelier">Atelier Services</a></li>
                   <li><a href="#contact">Contact</a></li>
                </ul>
             </div>
@@ -964,7 +964,7 @@
                <ul class="footer-nav">
                   <li><a href="collections/bulgarian-broderie/">Bulgarian broderie</a></li>
                   <li><a href="">Summer 2025</a></li>
-                  <li><a href="">Winter 2024</a></li>
+                  <!-- <li><a href="">Winter 2024</a></li> -->
                </ul>
             </div>
             <div class="footer-col">
